--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
     	<footer id="footer">
     		<span id="todo-count"><strong>{{remaining}}</strong> taches restantes</span>
             <ul id="filters">
-                <li><a href="#/" class="selected">Toutes</a></li>
-                <li><a href="#/active">Actives</a></li>
-                <li><a href="#/done">Finies</a></li>
+                <li><a href="#/" ng-class="{selected: locationPath.path() == '/'}">Toutes</a></li>
+                <li><a href="#/active" ng-class="{selected: locationPath.path() == '/active'}">Actives</a></li>
+                <li><a href="#/done" ng-class="{selected: locationPath.path() == '/done'}">Finies</a></li>
             </ul>
     	</footer>
     </section>
